# pcfutbol-editor

./: .commit-msg.txt  .gitignore  Cargo.toml  Dockerfile.dev  PACKAGING.md  PLAN.md  docker-compose.dev.yml
.github/workflows/: ci.yml
crates/pcf-codec/: Cargo.toml
crates/pcf-codec/examples/: build_synthetic_golden.rs  dump_container.rs  dump_stub_table.rs  enumerate_domestic_teams.rs  investigate_domestic_team.rs  investigate_editor_pm_dbc.rs  investigate_editor_pm_dbc_full.rs  investigate_pkf.rs  investigate_pkf_dir.rs  investigate_player_layout.rs  investigate_tactics_block.rs  investigate_velez.rs
crates/pcf-codec/src/: charmap.rs  container.rs  container_bridge.rs  cursor.rs  dbc.rs  layout.rs  lib.rs  synthetic.rs
crates/pcf-codec/tests/: round_trip.rs
crates/pcf-images/: Cargo.toml
crates/pcf-images/examples/: gen_synthetic_fixtures.rs
crates/pcf-images/src/: bmp.rs  import.rs  lib.rs  naming.rs  palette.rs
crates/pcf-images/tests/: fixtures_roundtrip.rs
crates/pcf-manager/: Cargo.toml
crates/pcf-manager/src/: lib.rs
crates/pcf-model/: Cargo.toml
crates/pcf-model/src/: error.rs  lib.rs  pointers.rs
fixtures/: PKF_FORMAT.md  README.md
fixtures/charmap/: README.md  confirmed_real_map.txt  confirmed_real_map_v2.txt  synthetic_map.txt
fixtures/golden/: README.md  real_river_9001_container_blob.README.md  synthetic_minimal.dbc
fixtures/manager/: README.md
fixtures/manager_synthetic/: README.txt
fixtures/pointers/: README.md  country_pointers.csv  team_pointers.csv
fixtures/synthetic-images-agent-b/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  mock.rs
tests/: Cargo.toml
tests/tests/: round_trip.rs
ui/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest-setup.ts
ui/scripts/: gen-country-names.mjs
ui/src/: App.svelte  app.css
ui/src/lib/: countryNames.test.ts  countryNames.ts  ipc.test.ts  ipc.ts  model.ts
ui/src/lib/components/: Advisor.svelte  AttributeBar.component.test.ts  AttributeBar.svelte  BeveledPanel.svelte  StatField.svelte  TabBar.svelte  attributeBar.test.ts  attributeBar.ts  tabBar.ts
ui/src/lib/design/: tokens.css  tokens.ts
ui/src/lib/mocks/: dbc.ts  ipc.ts
ui/src/routes/: CoachTacticsScreen.svelte  CrestsPhotosScreen.svelte  ExportScreen.svelte  FirstRunScreen.svelte  PlayerScreen.svelte  Routes.svelte  SquadScreen.svelte  TeamScreen.svelte
ui/src/routes/dev-components/: DemoPage.svelte
ui/src/routes/lib/: appStore.ts  attributeLabels.test.ts  attributeLabels.ts  autosave.test.ts  autosave.ts  firstRun.test.ts  firstRun.ts  pointerReshuffle.test.ts  pointerReshuffle.ts  undoRedo.test.ts  undoRedo.ts  validation.test.ts  validation.ts
