[workspace]
resolver = "2"
members = [
    "crates/pcf-model",
    "crates/pcf-codec",
    "crates/pcf-images",
    "crates/pcf-manager",
    "src-tauri",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
binrw = "0.13"
