[package]
name = "pcf-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "pcf_editor_lib"
path = "src/lib.rs"

[[bin]]
name = "pcf-editor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
pcf-model = { path = "../crates/pcf-model" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tauri = { version = "2" }

[dev-dependencies]
tempfile = "3"
